namespaces.local.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: susine-infra
  annotations:
    linkerd.io/inject: enabled
