k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: server
  name: server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      service: server
  strategy: {}
  template:
    metadata:
      labels:
        service: server
    spec:
      containers:
        - image: willypain/susine-infra-identity-server
          name: server
          imagePullPolicy: Always
          ports:
            - containerPort: 7082
              hostPort: 7082
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: server
  name: server
  namespace: default
spec:
  type: NodePort
  ports:
    - name: "7082"
      port: 7082
      targetPort: 7082
      nodePort: 30001
  selector:
    service: server
status:
  loadBalancer: {}
