gso.local.k8s.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-gso
  namespace: susine-infra
  labels:
    service: gso
spec:
  replicas: 1
  selector:
    matchLabels:
      service: gso
  template:
    metadata:
      labels:
        service: gso
    spec:
      containers:
        - name: gso
          image: local/gso-susine-dev:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: service-gso
  namespace: susine-infra
  labels:
    service: gso
spec:
  ports:
    - protocol: TCP
      port: 8080
  selector:
    service: gso
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gso
  namespace: susine-infra
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
    - host: gso.susine.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-gso
                port:
                  number: 8080
  ingressClassName: nginx
