matchmaking.k8s.local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-matchmaking
  labels:
    service: matchmaking
spec:
  replicas: 1
  selector:
    matchLabels:
      service: matchmaking
  template:
    metadata:
      labels:
        service: matchmaking
    spec:
      containers:
        - name: matchmaking
          image: local/matchmaking-susine-dev:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: service-matchmaking
  labels:
    service: matchmaking
spec:
  ports:
    - protocol: TCP
      port: 8080
  selector:
    service: matchmaking
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-matchmaking
spec:
  rules:
    - host: matchmaking.susine.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-matchmaking
                port:
                  number: 8080
  ingressClassName: nginx
